# enigma_MEG

./: README.md  pyproject.toml
enigmeg/: parse_bids.py  process_meg.py
enigmeg/QA/: Run_enigma_QA_GUI.py  enigma_QA_functions.py  enigma_QA_spectrapsd.py  enigma_prep_QA.py  enigma_prep_QA_coregonly.py  enigma_prep_QA_hcp.py
enigmeg/group/: ParcelStatsModel.ipynb  additional_spectra_processing.py  calc_display_stats.py  demographics_OHBM_abstract.py  enigma_harmonize.py  make_alldata_dataframe.py  make_group_dataframe_from_external.py  make_group_dataframe_from_manifest.py
extras/: HCP_to_BIDSlite.py  MOUS_fix_BIDS.py  mrn_eo_ec_dset_extraction.py
extras/BIDS_extra/: convert_to_bids_BL.py
extras/HCP_age/: convert_to_bids.py
extras/Rempe/: RempeData.py
