[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma-meg"
description = "Package to calculate metrics for the Enigma MEG consortium"
readme = "README.md"
requires-python = "<3.12" #Current limitation of tensorflow pinned verion

authors = [
  { name="Jeff Stout", email="stoutjd@nih.gov" },
  { name="Allison Nugent", email="nugenta@nih.gov" },
]

license = "UNLICENSE"
license-files = ["UNLICENSE"]
classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: POSIX",
    ]
dependencies = [
    'mne', 'numpy', 'scipy', 'pandas', 'neurodsp', 'fooof', 'munch', 'pysimplegui-4-foss',
    'statsmodels', 'nibabel', 'pytest', 'joblib', 'seaborn', 'mne_bids', 'matplotlib',
    'MEGnet-neuro', 'h5io', 'pyctf-nihmegcore'
]
version = '1.0.2'

[project.optional-dependencies]
testing = ['datalad','pytest','pygit2', 'pytest-cov']

[project.scripts]
"process_meg.py" = "enigmeg.process_meg:main"
"enigma_prep_QA.py" = 'enigmeg.QA.enigma_prep_QA:main'
"Run_enigma_QA_GUI.py" = 'enigmeg.QA.Run_enigma_QA_GUI:main'
"parse_bids.py" =  'enigmeg.parse_bids:main'
"enigma_QA_spectrapsd.py" = 'enigmeg.QA.enigma_QA_spectrapsd:main'
"enigma_prep_QA_hcp.py" = 'enigmeg.QA.enigma_prep_QA_hcp:main'


[tool.setuptools.packages.find]
include = ["enigmeg*"]
exclude = ["extras*", "conda*"]
